# cdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/lockfree/: spsc.cpp
cdl/: cdl.h  concurrent_queue.hpp  hierarchical_mutex.hpp  joining_thread.hpp  monitor.hpp  queue_mt.hpp  scope_guard.h  scope_guard.hpp  scoped_thread.hpp  thread_guard.hpp  thread_joiner.hpp  thread_pool_simple.hpp  thread_pool_waitable.hpp  timer.hpp
cdl/algorithm/: invoke_n.hpp
cdl/lockfree/: stack.hpp
cdl/messaging/: dispatcher.hpp  message_queue.hpp  receiver.hpp  sender.hpp  template_dispatcher.hpp
cdl/synchronization/: monitor.hpp  wait.hpp
cdl/thread/: joining_thread.hpp  thread_guard.hpp  thread_joiner.hpp
cdl/timing/: manual_timer.hpp  run_for.hpp  scoped_timer.hpp  uniform_wait.hpp
example/: CMakeLists.txt
example/sync/: spin_latch.cpp
include/cdl/: algorithm.hpp  concurrent.hpp  control.hpp  functional.hpp  guarded.hpp  iterator.hpp  lockfree.hpp  lowlock.hpp  memory.hpp  string.hpp  sync.hpp  synchronization.hpp  thread.hpp  threadpool.hpp  timing.hpp  utility.hpp
include/cdl/algorithm/: foreach.hpp
include/cdl/concurrent/: queue.hpp  stack.hpp
include/cdl/control/: scope_guard.hpp
include/cdl/functional/: with.hpp
include/cdl/guarded/: guarded.hpp
include/cdl/iterator/: dev_null.hpp  output_transform.hpp
include/cdl/lockfree/: slist.hpp  spsc.hpp
include/cdl/lockfree/detail/: cache_line.hpp  cache_pad.hpp  util.hpp
include/cdl/lowlock/: list.hpp  queue.hpp
include/cdl/lowlock/detail/: cache_line.hpp  cache_pad.hpp  spinlock.hpp
include/cdl/memory/: unique_ptr.hpp
include/cdl/string/: string.hpp  utility.hpp
include/cdl/sync/: barrier.hpp  critical_section.hpp  future.hpp  guarded.hpp  hierarchical_mutex.hpp  latch.hpp  lock_ref.hpp  monitor.hpp  spin_latch.hpp  srwlock.hpp
include/cdl/synchronization/: hierarchical_mutex.hpp
include/cdl/thread/: joining_thread.hpp  scoped_thread.hpp  thread_group.hpp  thread_guard.hpp  thread_joiner.hpp
include/cdl/threadpool/: function_wrapper.hpp  thread_pool_basic.hpp  thread_pool_local.hpp  thread_pool_waitable.hpp
include/cdl/timing/: exponential_wait.hpp  manual_timer.hpp  scoped_timer.hpp  uniform_wait.hpp
include/cdl/utility/: bit_cast.hpp  voidify.hpp
test/: CMakeLists.txt  _clean.bat  catch_main.cpp
test/algorithm/: foreach.cpp  invoke_n.cpp  invoke_n_test.cpp
test/concurrent/: queue.cpp  stack.cpp
test/concurrent-queue/: concurrent_queue_test.cpp
test/concurrent/queue/: queue_test.cpp
test/concurrent/stack/: stack_test.cpp
test/control/: scope_guard.cpp
test/functional/: with.cpp
test/guarded/: guarded_test.cpp
test/hierarchical-mutex/: hierarchical_mutex.cpp
test/iterator/: dev_null.cpp  output_transform.cpp
test/lockfree/: spsc.cpp
test/lockfree/slist/: slist_test.cpp
test/lockfree/stack/: stack_test.cpp
test/lowlock/: list.cpp  queue.cpp  spinlock.cpp
test/memory/: unique_ptr.cpp
test/monitor/: monitor_test.cpp
test/queue-mt/: queue_mt_test.cpp
test/scope-guard/: scope_guard.cpp
test/string/: basic_string.cpp
test/sync/: guarded.cpp  hierarchical_mutex.cpp  latch.cpp  spin_latch.cpp
test/synchronization/monitor/: monitor_test.cpp
test/thread/: scoped_thread.cpp  thread_group.cpp  thread_joiner.cpp
test/thread-joiner/: thread_joiner_test.cpp
test/thread-pool-simple/: thread_pool_simple_test.cpp
test/thread-pool-waitable/: thread_pool_waitable_test.cpp
test/thread/joining-thread/: joining_thread_test.cpp
test/thread/thread-guard/: thread_guard_test.cpp
test/timer/: exponential_wait_test.cpp  run_for_periodic_test.cpp  run_for_test.cpp  uniform_wait_test.cpp
test/timing/: exponential_wait.cpp  scoped_timer.cpp  uniform_wait.cpp
test/timing/manual-timer/: manual_timer_test.cpp
test/timing/run-for/: run_for_periodic_test.cpp  run_for_test.cpp
test/utility/: bit_cast.cpp  voidify.cpp
